manifests/certs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd # ArgoCD services are in the 'argocd' namespace
spec:
  entryPoints:
    - websecure # Assumes Traefik's websecure (HTTPS) entrypoint
  routes:
    - match: Host(`argo.seanchoo.top`)
      kind: Rule
      services:
        - name: argocd-server # The name of ArgoCD's UI service
          port: 443 # The HTTPS port of the argocd-server service
  tls:
    secretName: argocd-cert-secret # Name of the Kubernetes Secret that will hold your TLS certificate
                                   # This secret needs to be created by cert-manager or manually
